apply plugin: 'java'
apply plugin: 'maven'

repositories {
   mavenLocal()
   mavenCentral()
}

sourceCompatibility = 1.9
targetCompatibility = 1.9

dependencies {
    compile "org.jsoup:jsoup:1.7.2"
    compile "com.fasterxml.jackson.core:jackson-databind:2.6.5"
	compile "com.fasterxml.jackson.core:jackson-core:2.6.5"
}

jar {
    manifest {
        attributes 'Main-Class': 'kikstrava.KikStravaGui'
    }
}

def java_home = System.getenv('JAVA_HOME')
task link(type: Exec) {
    dependsOn 'clean'
    dependsOn 'jar'

    workingDir 'build'

    commandLine "${java_home}/bin/jlink", '--module-path', "../lib${File.pathSeparatorChar}${java_home}/jmods",
            '--add-modules', 'kikstrava', '--launcher', 'kikstrava=kikstrava/kikstrava.KikStravaGui', '--output', 'dist', '--strip-debug',
            '--compress', '2', '--no-header-files', '--no-man-pages'
}

